<resources>
    <string name="welcome_back">Welcome</string>
    <string name="skip">Skip</string>
    <string name="login">Login</string>
    <string name="email">Username</string>
    <string name="password">Password</string>
    <string name="organization">Organization</string>
    <string name="app_name">TESTA</string>
    <string name="Update_Profile"><u>Update Profile</u></string>
    <string name="formats">Formats</string>
    <string name="choose_formats">Choose Formats</string>
    <string name="select_camera">Select a Camera</string>
    <string name="ok_button">OK</string>
    <string name="cancel_button">Cancel</string>
    <string name="line1">Total duration of examination is defined on the exam panel for %1$s.</string>
    <string name="line22"><b>All the questions are mandatory. You need to answer all the questions in order to proceed.</b></string>
    <string name="line2">The clock will be set at the server. The countdown timer in the top right corner of screen will display the remaining time available
        for you to complete the examination.</string>
    <string name="line3">The Question Palette displayed on the right side of screen will show the
    status of each question using one of the following symbols:</string>
    <string name="line4">If candidate did not answer the Question, it will be consider as <b>Not Answered</b> and the Exam will not be submitted.</string>
    <string name="line5">There will be no negative marking.</string>
    <string name="line6">To answer a question, do the following:</string>
    <string name="line7">Click on the question number in the Question Palette at the right of your screen to go to that numbered question directly.
        Note that using this option does NOT save your answer to the current question.</string>
    <string name="line8">Click on <b>Mark for Review </b>to mark any question for review.</string>
    <string name="line9">Procedure for answering a multiple choice type question:</string>
    <string name="line10">To select your answer, click on the button of one of the options.</string>
    <string name="line11">Click Skip, Previous or Next to move between questions.</string>
    <string name="line13">Don\'t quit the application in between exam else the exam will not be submitted.</string>
    <string name="rplintro"> • A certification program under PMKVY to provide recognition to the informal learning
        or learning through work to get equal acceptance as the formal levels of education.</string>
    <string name="rplintro2"> • It aims to appreciate prior learning irrespective of the medium of achieving it. In short, RPL is a process
    of assessment of an individual’s prior learning to give due importance to learning as an outcome rather than learning as process.</string>
    <string name="benefits2">Benefits Under RPL 4.0 – BICE</string>
    <string name="benefitemp">Benefits to Employee :-</string>
    <string name="benefit1"> 1)No fee charged for assessment and certification</string>
    <string name="benefit2"> 2)Successfully certified candidates shall receive a pay-out of Rs 500</string>
    <string name="benefit3"> 3) 3 year accidental insurance INR 2 Lakhs free of cost</string>
    <string name="benefit4"> 4) Skill certificate can be further used for taking up next
        level of job role in the respective skill sector</string>
    <string name="hint_name">First Name*</string>
    <string name="EmploymentDetails">Designation/Role*</string>
    <string name="AnyOtherSector">Any Other Sector Please Specify*</string>
    <string name="hint_last_name">Last Name*</string>
    <string name="hint_mobile"> Mobile No*</string>
    <string name="alt_hint_mobile">Alternate Number</string>
    <string name="hint_email">Email Id*</string>
    <string name="hint_address_line1">Address Line1*</string>
    <string name="hint_city">Village/Town/City</string>
    <string name="hint_cityy">Village/Town/City*</string>
    <string name="hint_citymandi">Village/Town/City*</string>
    <string name="Help">Logout</string>
    <string name="save">Contact us</string>
    <string name="search">FAQ</string>
    <string name="Helpline">Submit Query</string>
    <string name="hint_address_line2">Address Line2</string>
    <string name="hint_pincode">Pincode*</string>
    <string name="hint_other">Other*</string>
    <string name="hint_other_id">Id Number*</string>
    <string name="hint_qualification">Qualification*</string>
    <string name="hint_aadhar">Aadhar No*</string>
    <string name="hint_pancard">PAN Card*</string>
    <string name="hint_empid">Employee ID/Seller ID</string>
    <string name="hint_seller_empid">Employee ID/Seller ID*</string>
    <string name="hint_empnm">Employer Name*</string>
    <string name="hint_location">Store Location/Location</string>
    <string name="hint_locationn">Work Location*</string>
    <string name="hint_bank_ac">Bank Account No*</string>
    <string name="hint_ifsc_code">IFSC Code*</string>
    <string name="err_msg_name">Enter your full name</string>
    <string name="err_msg_email">Enter a valid email address</string>
    <string name="err_msg_password">Enter the password</string>
    <string name="err_tech_stacks">It must be selected</string>
    <string name="err_msg_foraadhar">Enter a valid 12 digit aadhar no</string>
    <string name="err_msg_formobile">Enter a valid phone number</string>
    <string name="err_msg_for_first_name">Enter a valid first name</string>
    <string name="err_msg_for_employer_name">Enter Employer Name</string>
    <string name="err_msg_for_last_name">Enter a valid Last name</string>
    <string name="err_msg_for_address1">Enter a valid Address</string>
    <string name="err_msg_for_village_town_city">Enter a valid Village /Town /City</string>
    <string name="err_msg_for_tehsil_maandal_block">Enter a valid Tehsil /Maandal /Block</string>
    <string name="err_msg_for_birthPlace">Enter a valid birth place</string>
    <string name="err_msg_for_state">Select the State*</string>
    <string name="err_msg_pincode">Enter a valid 6 Digit Pincode</string>
    <string name="err_msg_for_namein_bank">Enter a valid bank name</string>
    <string name="err_msg_for_ifsc">Enter a valid IFSC</string>
    <string name="err_msg_for_sector">Select the Sector</string>
    <string name="err_msg_for_acno">Enter a valid Bank Ac Number</string>
    <string name="err_msg_for_guardian">Enter a valid guardian name</string>
    <string-array name="gender">
        <item>Select Gender*</item>
        <item>Male</item>
        <item>Female</item>
        <item>Transgender</item>

    </string-array>
    <string-array name="guardiantype">
        <item>Select Guardian Type*</item>
        <item>Father</item>
        <item>Mother</item>
        <item>Brother</item>
        <item>Sister</item>
        <item>Husband</item>
        <item>Uncle</item>
        <item>Aunt</item>


        

    </string-array>
    <string-array name="guardiantype1">
        <item>Select Guardian Type*</item>
        <item>S/O</item>
        <item>D/O</item>
        <item>W/O</item>


    </string-array>
    <string-array name="cast">
        <item>Select Caste*</item>
        <item>SC</item>
        <item>ST</item>
        <item>OBC</item>
        <item>General</item>
        <item>Others</item>


    </string-array>
    <string name="select_cast">Select Caste*</string>
    <string-array name="Title">
        <item>Select Title*</item>
        <item>Mr</item>
        <item>Mrs</item>
        <item>Ms</item>
        <item>Mx</item>

    </string-array>
    <string-array name="heardTitle">
        <item>Heard About Us</item>
        <item>Internet</item>
        <item>Friends/Relatives</item>
        <item>Kaushal Mela</item>
        <item>Newsletter</item>
        <item>Others</item>
    </string-array>
    <string-array name="Disablity">
        <item>Any Disability ?</item>
        <item>Yes</item>
        <item>No</item>
    </string-array>
    <string-array name="isEmployed">
        <item>Employed*</item>
        <item>Yes</item>
        <item>No</item>

    </string-array>
    <string name="isEmploy">Employed*</string>
    <string-array name="Employment_status_string">
        <item>Select</item>
        <item>Employee</item>
        <item>Self Employed</item>

    </string-array>
    <string-array name="Employment_status_string_corporate">
        <item>Employment Status*</item>
        <item>Employed</item>
        <item>Un Employed</item>
        <item>Experienced but Currently Un Employed</item>
        <item>Self Employed</item>
    </string-array>
    <string-array name="type_of_Disablity">
        <item>Select Type of Disability</item>
        <item>Blindness (Visually Impaired)</item>
        <item>Low-Vision</item>
        <item>Deaf</item>
        <item>Hard of Hearing</item>
        <item>Deaf and Blindness</item>
        <item>Intellectual Disability</item>
        <item>Dwarfism</item>
        <item>Specific Learning Disabilities</item>
        <item>Other</item>


    </string-array>
    <string-array name="type_of_Disablity_corporate">
        <item>Select Type of Disability</item>
        <item>Locomotor Disability</item>
        <item>Leprosy Cured Person</item>
        <item>Dwarfism</item>
        <item>Acid Attack Victims</item>
        <item>Blindness/Visual Impairment</item>
        <item>Low-vision (Visual Impairment)</item>
        <item>Deaf</item>
        <item>Hard of Hearing</item>
        <item>Speech and Language Disability</item>
        <item>Intellectual Disability/Mental Retardation</item>
        <item>Autism Spectrum Disorder</item>
        <item>Specific Learning Disabilities</item>
        <item>Mental Behavior-Mental Illness</item>
        <item>Haemophilia</item>
        <item>Thalassemia</item>
        <item>Sickle Cell Disease</item>
        <item>Deaf Blindness</item>
        <item>Cerebral Palsy</item>
        <item>Multiple Sclerosis</item>
        <item>Muscular Dystrophy</item>


    </string-array>
    <string name="Start_Exam1">Start Exam</string>
    <string name="home">Home</string>
    <string name="welcome">Welcome</string>
    <string name="helpline_no">HelpLine No</string>
    <string name="helpline_no_1">Helpline No 1</string>
    <string name="helpline_no_2">Helpline No 2</string>
    <string name="helpline_no_3">Helpline No 3</string>
    <string name="tollfree">TollFree Number</string>
    <string name="text1"><font color='#0E0E0E'>Fill the details to Login</font></string>
    <string name="text2"><font color='#0E0E0E'>Log in Account</font></string>
    <string name="title_activity_alert_choose_file">Select Image/File</string>
    <string name="contactus">Contact Us</string>
    <string name="helpline_no_4">Helpline No 4</string>
    <string name="assistcall">for Technical Assistance please call</string>
    <string name="submitquuery">Submit Query</string>
    <string name="camera">Camera</string>
    <string name="choose_from_gallery">Choose from Gallery</string>
    <string name="choose_file">Choose File</string>
    <string name="cancel">Cancel</string>
    <string name="select">Select</string>
</resources>