<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:layout_gravity="center_horizontal">
  <!--  "Choose from Gallery", "Take Photo", "Choose File", "Cancel"-->

  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/title_activity_alert_choose_file"
      android:padding="@dimen/_10sdp"
      android:textSize="@dimen/_16sdp"
      android:textColor="@color/black"
      android:textStyle="bold"
      android:visibility="gone"
      android:gravity="center_horizontal"
      android:foreground="?attr/selectableItemBackgroundBorderless">
  </TextView>

  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/camera"
      android:padding="@dimen/_15sdp"
      android:textSize="@dimen/_12sdp"
      android:textColor="@color/black"
      android:gravity="center_horizontal"
      android:foreground="?attr/selectableItemBackgroundBorderless"
      android:id="@+id/camera">
  </TextView>
  <View
      android:layout_width="match_parent"
      android:layout_height=".5dp"
      android:background="@color/lightgrey"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_from_gallery"
        android:padding="@dimen/_15sdp"
        android:textSize="@dimen/_12sdp"
       android:gravity="center_horizontal"
        android:textColor="@color/black"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:id="@+id/gallary">
    </TextView>


    <View
        android:layout_width="match_parent"
        android:layout_height=".5dp"
        android:background="@color/lightgrey"/>



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_file"
        android:padding="@dimen/_15sdp"
        android:textSize="@dimen/_12sdp"
        android:gravity="center_horizontal"
        android:textColor="@color/black"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:id="@+id/file">
    </TextView>

    <View
        android:layout_width="match_parent"
        android:layout_height=".5dp"
        android:background="@color/lightgrey"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:padding="@dimen/_15sdp"
        android:textSize="@dimen/_12sdp"
        android:textColor="@color/black"
        android:gravity="center_horizontal"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:id="@+id/cancel">
    </TextView>

  <ImageView
      android:layout_width="@dimen/_100sdp"
      android:layout_height="@dimen/_100sdp"
      android:layout_marginTop="@dimen/_20sdp"
      android:visibility="gone"
      android:id="@+id/profile">

  </ImageView>

  <ProgressBar
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:visibility="gone"
      android:id="@+id/progress"/>

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/loading"
    android:visibility="gone"
    android:text="Loading..."/>



</LinearLayout>