<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/logbg"
    tools:context=".auth.Login">
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/iv_test"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_30sdp"
                android:src="@drawable/test"/>
            <TextView
                android:id="@+id/tv_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="@dimen/_16sdp"
                android:textSize="@dimen/_16sdp"
                android:text="@string/text1" />

            <androidx.cardview.widget.CardView
                android:layout_below="@+id/tv_text"
                android:id="@+id/profileCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:layout_gravity="center"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="24dp"
                app:cardElevation="2dp"
                app:cardUseCompatPadding="true">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/tv_log"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/text2"
                        android:layout_marginTop="@dimen/_32sdp"
                        android:textSize="@dimen/_16sdp"
                        android:gravity="center" />
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/emailEditText1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tv_log"
                        android:layout_marginStart="@dimen/_24sdp"
                        android:layout_marginEnd="@dimen/_24sdp"
                        android:layout_marginTop="@dimen/_32sdp"
                        style="@style/Widget.Design.TextInputLayout">

                        <EditText
                            android:id="@+id/username"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableRight="@drawable/user"
                            android:singleLine="true"
                            android:maxLength="50"
                            android:hint="@string/email"/>
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_below="@+id/emailEditText1"
                        android:id="@+id/passwordEditText2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_24sdp"
                        android:layout_marginEnd="@dimen/_24sdp"
                        app:passwordToggleTint="@color/button"
                        app:passwordToggleEnabled="true"
                        style="@style/Widget.Design.TextInputLayout"
                        android:layout_marginTop="@dimen/_20sdp">
                        <EditText
                            android:id="@+id/password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:singleLine="true"
                            android:hint="@string/password"
                            android:maxLength="50"
                            android:inputType="textPassword"
                            />
                    </com.google.android.material.textfield.TextInputLayout>


                    <Button
                        android:id="@+id/loginButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/passwordEditText2"
                        android:layout_centerHorizontal="true"
                        android:layout_marginStart="@dimen/_64sdp"
                        android:layout_marginTop="@dimen/_32sdp"
                        android:background="@drawable/button_all"
                        android:text="@string/Start_Exam1"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_16sdp"
                        android:textStyle="bold"
                        app:backgroundTint="#01C0DA" />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_50sdp"
                        android:layout_below="@+id/loginButton">
                        <TextView
                            android:id="@+id/skipTextView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:gravity="center_horizontal"
                            android:textSize="@dimen/_12sdp"
                            android:layout_alignParentBottom="true"
                            />
                    </LinearLayout>
                </RelativeLayout>

            </androidx.cardview.widget.CardView>


        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


</RelativeLayout>



